maj tkinter + pres mise en page pour ajout module

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
 /.venv
-/Python-Maths_Polynome du Second degré.pdf
-/Python-Maths_Polynome du Second degré.tex
+/Py-Maths_Polynôme du second degré.pdf
 /__pycache__
