debut équation inéquation 1 er degré

--- a/sources/.gitignore
+++ b/sources/.gitignore
@@ -1,4 +1,5 @@
 /.venv
 /Py-Maths_Polynôme du second degré.pdf
 /Py-Maths_Equation Inéquation premier degre.pdf
+/Py-Maths_Equation Inéquation premier degre.pdf
 /__pycache__
