--- a/sources/.gitignore
+++ b/sources/.gitignore
@@ -1,5 +1,5 @@
 /.venv
 /Py-Maths_Polynôme du second degré.pdf
-/Py-Maths_Equation Inéquation premier degre.pdf
-/Py-Maths_Equation Inéquation premier degre.pdf
+/Py-Maths_Equation_Inequation_premier_degre.pdf
+/Py-Maths_Equation_Inequation_premier_degre.tex
 /__pycache__
