commande création venv et requirements fonctionnent correctement manque patch doc et readme

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,5 @@
-altgraph==0.17.4
-antlr4-python3-runtime==4.7.2
-blinker==1.7.0
-bottle==0.12.25
-bottle-websocket==0.2.9
-certifi==2023.11.17
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-contourpy==1.2.0
-cycler==0.12.1
-defusedxml==0.7.1
-distlib==0.3.8
-Eel==0.16.0
-filelock==3.13.1
-fonttools==4.45.0
-fpdf2==2.7.7
-future==1.0.0
-gevent==24.2.1
-gevent-websocket==0.10.1
-greenlet==3.0.3
-idna==3.6
-itsdangerous==2.1.2
-Jinja2==3.1.2
-kiwisolver==1.4.5
-MarkupSafe==2.1.3
-matplotlib==3.8.2
-mpmath==1.3.0
-numpy==1.26.2
-ordered-set==4.1.0
-packaging==23.2
-pefile==2023.2.7
-Pillow==10.1.0
-platformdirs==4.2.0
-pycparser==2.21
-pyinstaller==6.4.0
-pyinstaller-hooks-contrib==2024.1
-PyLaTeX==1.4.2
-pyparsing==3.1.1
-python-dateutil==2.8.2
-pywin32-ctypes==0.2.2
-requests==2.31.0
-setuptools==69.1.0
-six==1.16.0
-termcolor==2.4.0
-urllib3==2.1.0
-virtualenv==20.25.0
-Werkzeug==3.0.1
-whichcraft==0.6.1
-zope.event==5.0
-zope.interface==6.2
+pylatex
+matplotlib
+numpy
+latexify-py
+sympy
