MAJ arbo des fichiers/dossiers & avancement test equa 1er deg

--- a/sources/.gitignore
+++ b/sources/.gitignore
@@ -1,2 +1,6 @@
 /.venv
 /__pycache__
+/Exo_Equation_deux_inconnues/__pycache__
+/Exo_Equation_premier_degre/__pycache__
+/Exo_polynome_second_degre/__pycache__
+/Module_Gestion/__pycache__
